# connectomics_segmentation

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: config.yaml  inference.yaml  train.yaml
configs/callbacks/: crf_postprocessing.yaml  default.yaml  early_stopping.yaml  inference.yaml  model_checkpoint.yaml  save_to_tiff.yaml  test_visualization.yaml  unsupervised.yaml
configs/data/: labeled_data.yaml  raw_data.yaml
configs/experiment/: dilated_conv_2_layer.yaml
configs/experiment/3_layer/: 8.yaml  8_center.yaml
configs/experiment/4_conv/: 16_resnet.yaml  16_resnet_layernorm.yaml  32.yaml  32_layernorm.yaml  32_resnet.yaml  32_resnet_layernorm.yaml
configs/experiment/convnext/: 16.yaml  16_center.yaml  16_vae.yaml  32.yaml  32_center.yaml  32_dilated.yaml  (+2 more)
configs/hydra/: default.yaml
configs/loggers/: default.yaml  wandb.yaml
configs/model/: default.yaml  supervised_simple.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml  supervised_bf16_mixed.yaml  supervised_fp16_mixed.yaml  supervised_fp32.yaml  unsupervised_bf16_mixed.yaml  unsupervised_default.yaml  unsupervised_fp16_mixed.yaml  unsupervised_fp32.yaml
connectomics_segmentation/: inference.py  supervised_meta_model.py  train.py  unsupervised_meta_models.py  unsurervised_meta_models.py
connectomics_segmentation/callbacks/: __init__.py  crf_postprocessing.py  save_to_tiff.py  test_visualization.py
connectomics_segmentation/data/: labeled_data.py  raw_data.py  subdataset.py
connectomics_segmentation/losses/: focal_loss.py
connectomics_segmentation/models/: __init__.py  convnext.py  vae.py
connectomics_segmentation/postprocessing/: crf.py
connectomics_segmentation/utils/: aggregator.py  checkpoints.py  instantiators.py  logging_utils.py  paddings.py  pylogger.py  register_configs.py  resolvers.py
notebooks/: classical_supervised_voxelwise.ipynb  gmm.ipynb  labels_analysis.ipynb  voxelwise_handmade_features.ipynb
report/: references.bib
report/data/: label_dist.csv
report/report/: report.tex
report/slides/: slides.tex
scripts/: config_example.txt  training_slurm_job.sh
(+37 files in other folders)
