[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "connectomics_segmentation"
version = "2024.0.1"
authors = [
    {name = "Oleh Shkalikov", email = "Oleh.Shkalikov@mailbox.tu-dresden.de"},
]
description = "Semantic segmentation of the connectomics volume with limited amount of labeled data"
requires-python = ">=3.10.8"
dependencies = [
    "torch==2.1.0",
    "torchvision==0.16.0",
    "lightning==2.1.0",
    "torchmetrics==1.2.0",
    "tensorboard==2.15.0",
    "wandb==0.16.1",
    "tifffile==2023.9.26",
    "patchify==0.2.3",
    "volumentations-3D==1.0.4",
    "pydensecrf @ git+https://github.com/lucasb-eyer/pydensecrf.git@dd070546eda51e21ab772ee6f14807c7f5b1548b"
]
license = {file = "LICENSE"}
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[project.urls]
Repository = "https://github.com/ShkalikovOleh/connectomics_segmentation"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "ipykernel",
    "matplotlib",
    "scikit-learn==1.4.0"
]

[tool.isort]
profile = "black"
